Begin update to 1.18

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,20 @@
+
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx3G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-minecraft_version=1.16.4
-yarn_mappings=1.16.4+build.7
-loader_version=0.10.8
+# check these on https://fabricmc.net/use
+minecraft_version=1.18-pre5
+yarn_mappings=1.18-pre5+build.4
+loader_version=0.12.5
 
 #Fabric api
-fabric_version=0.28.3+1.16
-libgui_version=3.2.2+1.16.3
-autoconfig_version=3.3.1
+fabric_version=0.42.8+1.18
 
+# Dependencies
+libgui_version=5.0.0-beta.1+1.18-pre2
+config_version=1.0.8-1.17
 # Mod Properties
-mod_version=1.0.0+mc.1.16.4
-maven_group=io.github.frqnny
+mod_version = 0.6.0-1.18
+maven_group = io.github.frqnny
 archives_base_name=cspirit
