--- a/gradle.properties
+++ b/gradle.properties
@@ -4,15 +4,15 @@ org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.18-pre8
-yarn_mappings=1.18-pre8+build.4
+minecraft_version=1.18-rc1
+yarn_mappings=1.18-rc1+build.1
 loader_version=0.12.5
 
 #Fabric api
-fabric_version=0.43.0+1.18
+fabric_version=0.43.1+1.18
 
 # Dependencies
-libgui_version=5.0.0-beta.1+1.18-pre2
+libgui_version=5.0.0-beta.2+1.18-rc1
 config_version=1.0.8-1.17
 # Mod Properties
 mod_version = 1.1.0-1.18
