--- a/gradle.properties
+++ b/gradle.properties
@@ -4,17 +4,17 @@ org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.18-rc1
-yarn_mappings=1.18-rc1+build.1
-loader_version=0.12.5
+minecraft_version=1.18
+yarn_mappings=1.18+build.1
+loader_version=0.12.8
 
 #Fabric api
-fabric_version=0.43.1+1.18
+fabric_version=0.44.0+1.18
 
 # Dependencies
-libgui_version=5.0.0-beta.2+1.18-rc1
+libgui_version=5.1.0+1.18
 config_version=1.0.8-1.17
 # Mod Properties
-mod_version = 1.1.0-1.18
+mod_version = 1.1.2-1.18
 maven_group = io.github.frqnny
 archives_base_name=cspirit
